results/849f445d4679a4f91a9d153af8cad53b/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper({fitarraystring}, emcee, m,c, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, 849f445d4679a4f91a9d153af8cad53b, {modelStrings},   argslist = (x, 0.65, data)
                                                           ^
SyntaxError: invalid syntax
